# CModdingTest

./: .gitignore  CMakeLists.txt
CModGame/: Data.c  Data.h  Main.c
CModLibrary/: CDataDefinition.c  CDataDefinition.h  CGameAPI.c  CGameAPI.h  CMod.c  CMod.h
CStandardLibrary/: BinaryTree.h  CString.c  CString.h  Dict.c  Dict.h  EventHandler.h  FatPtr.h  Random.h
CStandardLibrary/Collections/: BinaryTree.c  BinaryTree.h  Dict.c  Dict.h
CStandardLibrary/Collections/Lists/: CharArrayList.h  Int32List.c  Int32List.h  StringList.h
ExampleCMod/: Mod.c  Mod.h
ExampleCMod/Assets/Definitions/: ExampleModData.mdef
SecondCMod/: Mod.c  Mod.h
SecondCMod/Assets/Data/: ExampleModData.mdat
